# note-markdown

./: .env.example  .gitignore  LICENSE  README.md  build.sh  build_py.sh  build_rs.sh  clear.sh  install.sh  note.py  note_markdown.py  release.sh  release_gh.sh  setup.sh  test_note.sh  test_notemd.sh  uninstall.sh
commands/: format.py  markdown.py  update.py
doc/installation/: README.txt
doc/sublime_text/: README.md  run_command_on_save.py
doc/vscode/: README.md
note_rust/: Cargo.toml  build.sh
note_rust/src/: note_markdown.rs
note_rust/src/commands/: create.rs
rust/: Cargo.toml
rust/src/: main.rs  note.rs
rust/src/commands/: format.rs  markdown.rs  mod.rs  update.rs
test/: a.txt  b.txt
