[package]
name = "note"
version = "0.0.1" # This is not the real version
edition = "2021" # Rust edition
build = "build.rs"

[[bin]]
name = "note"
path = "src/note.rs"

[dependencies]
unicode-width = "0.1"
dotenvy = "0.15"
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
